2007-03-04  Bruno Haible  <bruno@clisp.org>

	* printf-posix.m4 (gt_PRINTF_POSIX): Treat BeOS like NetBSD and Woe32
	systems.

2007-02-13  Bruno Haible  <bruno@clisp.org>

	* intdiv0.m4 (gt_INTDIV0): Assume ANSI C. Fix underquoting bug.
	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.

2007-01-10  Eric Blake  <ebb9@byu.net>

	* wint_t.m4 (gt_TYPE_WINT_T): Include <stddef.h> before <wchar.h>, to
	work around BSDI bug in BSD/OS 4.0.1.
	Reported by Chris McGuire.

2006-11-21  Bruno Haible  <bruno@clisp.org>

	* size_max.m4 (gl_SIZE_MAX): Use AC_COMPUTE_INT instead of
	_AC_COMPUTE_INT.
	(AC_COMPUTE_INT): Add fallback definition for autoconf < 2.61.

2006-11-27  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16.1 released.

2006-11-20  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Revert 2005-07-28 patch: Use
	changequote instead of pairs of brackets.
	Reported by Andreas Schwab <schwab@suse.de>.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16 released.

2006-10-19  Bruno Haible  <bruno@clisp.org>

	* size_max.m4 (gl_SIZE_MAX): Cache the result.

2006-10-15  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Don't use 'eval' on commands, only on
	variable assignments. Fixes bug introduced on 2006-10-01.

2006-10-11  Bruno Haible  <bruno@clisp.org>

	* intl.m4 (AM_INTL_SUBDIR): Invoke AC_TYPE_LONG_LONG_INT instead of
	gl_AC_TYPE_LONG_LONG.

2006-10-11  Bruno Haible  <bruno@clisp.org>

	* longlong.m4: Add comments.
	* ulonglong.m4: Likewise.

2006-08-22  Eric Blake  <ebb9@byu.net>

	* longlong.m4 (AC_TYPE_LONG_LONG_INT): Avoid compiler warning.

2006-07-01  Paul Eggert  <eggert@cs.ucla.edu>

	* longlong.m4 (AC_TYPE_LONG_LONG_INT): Backport from Autoconf 2.60,
	but fix a bug, by requiring at least 64 bits.
	* ulonglong.m4 (AC_TYPE_UNSIGNED_LONG_LONG_INT): Likewise.
	* longlong.m4 (gl_AC_TYPE_LONG_LONG): Now just call
	AC_TYPE_LONG_LONG_INT.  This macro is obsolete and will go soon.